<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PhotoActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pilih_foto_ktp"
        android:fontFamily="@font/alegreya_sans_medium"
        android:textSize="25sp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ketuk_gambar"
        android:fontFamily="@font/alegreya_sans_medium"
        android:textSize="13sp"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="5dp"
        android:textColor="@android:color/black" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:src="@drawable/upload_iv"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:id="@+id/ivFotoKTP"
        android:contentDescription="@string/foto_ktp" />


    <Button
        android:textAllCaps="false"
        android:layout_marginTop="5dp"
        android:layout_width="fill_parent"
        android:layout_height="44dp"
        android:text="@string/upload"
        android:background="@drawable/background_btn2"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/btnUpload" />

    <Button
        android:textAllCaps="false"
        android:layout_width="fill_parent"
        android:layout_height="44dp"
        android:text="@string/lanjut"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:background="@drawable/background_btn"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:id="@+id/btnLanjut" />

</LinearLayout>