<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:background="@color/colorDevcamp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="262dp"
                android:layout_height="79dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="28dp"
                android:fontFamily="@font/cantarell_bold"
                android:maxWidth="300dp"
                android:text="@string/wujudkan_mimpi_ke_tanah_suci"
                android:textColor="@android:color/white"
                android:textSize="23sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="338dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/antic"
                android:maxWidth="300dp"
                android:text="@string/mulai_tabungan_hajimu_sekarang_mudah_aman_dan_fleksibel"
                android:textColor="@color/cardview_light_background"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.328"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <Button
                android:id="@+id/btnMulaiNabung"
                android:background="@drawable/background_btn"
                android:textColor="@color/colorWhite"
                android:layout_width="162dp"
                android:layout_height="44dp"
                android:layout_marginStart="26dp"
                android:layout_marginBottom="16dp"
                android:text="@string/mulai_nabung"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
        <TextView
            android:layout_marginStart="15dp"
            android:layout_marginTop="338dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mulaiajadulu"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textSize="20sp"/>
    </LinearLayout>
</ScrollView>